# fastapi-boilerplate

./: .env.example  .gitignore  pyproject.toml  tox.ini
src/auth/domain/: commands.py  entity.py  events.py
src/auth/infra/: crypto.py  jwt.py  models.py
src/auth/interfaces/: deps.py  http.py  http_exc.py
src/auth/services/: handlers.py
src/common/: http.py
src/main/domain/: entity.py
src/main/infra/: bootstrap.py  bus.py  conf.py  middleware.py  models.py  orm.py  routing.py  wsgi.py
src/main/interfaces/: http.py
src/main/management/: manage.py  std.py
src/main/management/commands/: startapp.py
src/main/management/template/domain/: commands.py  entity.py  events.py
src/main/management/template/infra/: models.py
src/main/management/template/interfaces/: http.py
src/main/management/template/services/: handlers.py
tests/: conftest.py
tests/test_auth/: test_login.py  test_register.py
